Bug 54171 - black screen after boot screen with intel gma 4500m (acer travelmate)
Summary: black screen after boot screen with intel gma 4500m (acer travelmate)
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jani Nikula
URL:
Keywords:
Depends on:
Blocks: 56331
  Show dependency tree
 
Reported: 2013-02-20 19:38 UTC by thubten topgyal
Modified: 2014-01-21 16:07 UTC (History)
5 users (show)

See Also:
Kernel Version: 3.x
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Output of lspci -vmmnn without loading module (4.04 KB, text/plain)
2013-05-11 11:33 UTC, Thomas131
Details
the output of lspci -vmmnn after the modprobe command (4.04 KB, text/plain)
2013-07-02 21:09 UTC, Thomas131
Details

Description thubten topgyal 2013-02-20 19:38:36 UTC
Intel GMA 4500M on 15.6" HD LCD
in acer travelmate 5735Z
screen is black after boot screen.
kernel 3.x problem.

see https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-video-intel/+bug/744187 and others. 

i keep approx. 10 gnu/linux systems running. 

with kernel 3.x, i experienced the black screen problem on laptops for quite a long time now. i could solve the problem with workarounds which worked for some time, then the black screen problem came back again -- probably due to updates (?). so i reinstalled older systems which are outdated by now (no updates). ---- and i waited ...

lastly, i could install without problems newer systems on 6 machines (asus 1215b, lenovo, acer, desktop computers), so i wanted to update the other systems as well.

today i tried once again ubuntu 12.04, kubuntu 12.04, linux mint 13 both in 32 bit and 64 bit versions on the acer travelmate 5735Z -- still the same problem, or worse than before: black after the boot screen even with live-cd (which used to work before). 

i cannot live with "workarounds" in such an important feature, especially when they don't seem to fix things once and for all. ---- i need totally robust systems for my users. 

THIS problem makes my life really hard SINCE A VERY LONG TIME AND AFTER EVERYTHING WORKED SO WELL. it is very difficult to explain people since 2011 or so that i simply cannot help them -- after i talked them into using gnu/linux; and it costs me too much time. 

best wishes, topgyal
Comment 1 Aaron Lu 2013-02-21 07:07:45 UTC
Looks like this is a bug of the graphics drm driver issue.
Comment 2 Jani Nikula 2013-02-21 08:39:21 UTC
Please try booting with the i915.invert_brightness=1 module parameter. (Many live CDs will allow you to edit the kernel command line before booting too.)

If this helps, please attach output of 'lspci -vmmnn' on your machine.
Comment 3 Jani Nikula 2013-04-09 14:18:48 UTC
Ping, please try the suggestion from comment #2 and report back.
Comment 4 Jani Nikula 2013-04-30 06:46:12 UTC
(In reply to comment #2)
> Please try booting with the i915.invert_brightness=1 module parameter. (Many
> live CDs will allow you to edit the kernel command line before booting too.)
> 
> If this helps, please attach output of 'lspci -vmmnn' on your machine.

topgyal, please provide the info to make some progress on this bug.
Comment 5 Thomas131 2013-05-11 11:28:09 UTC
Hello,
I have the same problem. So I tried it:
> admini@laptop2 ~ $ modprobe -v -a i915.invert_brightness=1
> WARNING: Module i915.invert_brightness=1 not found.
I also tried:
> admini@laptop2 ~ $ insmod -v i915.invert_brightness=1
> insmod: can't read '-v': No such file or directory
> admini@laptop2 ~ $ insmod i915.invert_brightness=1
> insmod: can't read 'i915.invert_brightness=1': No such file or directory
> admini@laptop2 ~ $ insmod i915.invert_brightness
> insmod: can't read 'i915.invert_brightness': No such file or directory


Thomas131
Comment 6 Thomas131 2013-05-11 11:33:20 UTC
Created attachment 101181 [details]
Output of lspci -vmmnn without loading module

Also I wasn't able to run the module, I tried lspci -vmmnn. Here's the result.
Comment 7 Jani Nikula 2013-05-13 06:45:38 UTC
(In reply to comment #5)
> Hello,
> I have the same problem. So I tried it:

What makes you think you have the same problem?

> > admini@laptop2 ~ $ modprobe -v -a i915.invert_brightness=1
> > WARNING: Module i915.invert_brightness=1 not found.

That should be 'modprobe i915 invert_brightness=1'. But are you sure you don't already have i915 loaded at that point? 'lsmod | grep i915' should tell you.

To be on the safe side, you should try adding i915.invert_brightness=1 to the kernel command line in your boot loader instead.
Comment 8 Thomas131 2013-05-27 18:58:05 UTC
(In reply to comment #7)
> What makes you think you have the same problem?
Because I also have an Acer Travelmate with an Intel GMA 4500mh(I don't know if the letters are true because the laptop doesn't work at the moment) Chip and When I searched on the internet, I found out that this is a problem of the blacklights.
> That should be 'modprobe i915 invert_brightness=1'. But are you sure you
> don't
> already have i915 loaded at that point? 'lsmod | grep i915' should tell you.
> 
> To be on the safe side, you should try adding i915.invert_brightness=1 to the
> kernel command line in your boot loader instead.
I will try it, when I set up the laptop with Linux Mint 15 in some days.

Thomas131
Comment 9 Thomas131 2013-07-02 21:09:42 UTC
Created attachment 106641 [details]
the output of lspci -vmmnn after the modprobe command

Hello,
Sorry for writing back so late.
I have successfully excuted the modprobe command. Then I've created this new output of lspci -vmmnn.

Thomas131
Comment 10 Jani Nikula 2013-08-08 08:16:25 UTC
Thomas131, you say that you have successfully executed the modprobe command. Does that mean having i915.invert_brightness=1 module parameter makes a difference or not? Does the screen light up with the parameter, but not without the parameter? This is the crucial question.
Comment 11 Thomas131 2013-09-19 21:21:40 UTC
Hello,
Thanks for writing back. Sorry for my late answer. I have had problems to log in to bugzilla. So I gave up about 5 times.

The modprobe command doesn't seem to work. The boot parameters worked!

m.f.G.:Thomas131
Comment 12 Jani Nikula 2013-09-20 13:45:42 UTC
Shotgun approach patch sent to use inverted brightness for all gen4 gm45 acers.
http://mid.gmane.org/1379678731-31098-1-git-send-email-jani.nikula@intel.com
Comment 13 Jani Nikula 2013-10-09 12:06:25 UTC
Presumed fixed by
commit ee1452d7458451a7508e0663553ce88d63958157
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Fri Sep 20 15:05:30 2013 +0300

    drm/i915: assume all GM45 Acer laptops use inverted backlight PWM

which on its way to 3.13.
Comment 14 Dylan Borg 2013-12-21 17:35:01 UTC
This fix broke already working laptop displays (as of 3.12) (Acer Extensa 5635Z)
Comment 15 Jani Nikula 2013-12-30 10:14:00 UTC
Looks like we'll have to revert the fix referenced in comment #13 due to regressions, and reopen this bug.
Comment 16 Jani Nikula 2014-01-02 13:36:52 UTC
Revert is on its way.
Comment 17 Daniel Vetter 2014-01-08 18:52:32 UTC
Revert is merged, thanks for reporting this regression.
Comment 18 Jani Nikula 2014-01-09 06:32:43 UTC
(In reply to Daniel Vetter from comment #17)
> Revert is merged, thanks for reporting this regression.

Daniel, you got it backwards. This needs to be reopened because the fix was reverted. :)
Comment 19 Jani Nikula 2014-01-21 16:02:42 UTC
The fix has been merged to drm-intel-nightly as

commit e107db4002a5cb98db1b3e121f47cf5d31d5a704
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Mon Jan 13 17:30:34 2014 +0200

    erm/i915: quirk invert brightness for Acer Aspire 5336

It should eventually flow back to stable kernels. Thanks for the report.
Comment 20 Jani Nikula 2014-01-21 16:07:19 UTC
(In reply to Jani Nikula from comment #19)
> commit e107db4002a5cb98db1b3e121f47cf5d31d5a704

Make that d2ce50dd1cc9e702428b7fe761aa6e46e758068c

Note You need to log in before you can comment on or make changes to this bug.